# glmcode

./: API_DOCUMENTATION.md  CHANGELOG.md  Cargo.toml  README.md  README.zh.md  cliff.toml  query-usage.mjs
.github/workflows/: release.yml
npm-publish/darwin-arm64/: package.json
npm-publish/darwin-x64/: package.json
npm-publish/linux-x64/: package.json
npm-publish/linux-x64-musl/: package.json
npm-publish/main/: README.md  package.json
npm-publish/win32-x64/: package.json
npm/main/: README.md  package.json
npm/main/scripts/: postinstall.js
npm/scripts/: prepare-packages.js
src/: api.rs  cli.rs  main.rs  updater.rs
src/config/: loader.rs  models.rs  types.rs
src/core/: statusline.rs
src/core/segments/: context_window.rs  decode_speed.rs  glm_usage.rs  mod.rs  usage.rs
src/ui/: app.rs  main_menu.rs
src/ui/components/: help.rs  preview.rs  segment_list.rs  settings.rs  theme_selector.rs
src/ui/themes/: presets.rs  theme_cometix.rs  theme_default.rs  theme_gruvbox.rs  theme_minimal.rs  theme_nord.rs  theme_powerline_dark.rs  theme_powerline_light.rs  theme_powerline_rose_pine.rs  theme_powerline_tokyo_night.rs
src/utils/: claude_code_patcher.rs
