[package]
name = "glmcode"
version = "1.0.9"
edition = "2021"
description = "GLMCode - Claude Code StatusLine with GLM usage tracking"
authors = ["kiritoko1029"]
license = "MIT"
repository = "https://github.com/kiritoko1029/glmcode"
readme = "README.md"
keywords = ["claude", "statusline", "glm", "rust", "claude-code"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.0", features = ["derive"] }
toml = "0.8"

ratatui = { version = "0.29", optional = true }
crossterm = { version = "0.28", optional = true }

ansi_term = { version = "0.12", optional = true }
ansi-to-tui = { version = "7.0", optional = true }

ureq = { version = "2.10", features = ["json"], optional = true }
semver = { version = "1.0", optional = true }
chrono = { version = "0.4", features = ["serde"], optional = true }
dirs = { version = "5.0", optional = true }
regex = "1.0"
unicode-width = "0.1"
reqwest = { version = "0.11", default-features = false, features = ["json", "blocking", "rustls-tls", "gzip"] }
url = "2.5"
percent-encoding = "2.3"



[features]
default = ["tui", "self-update", "dirs"]
tui = ["ratatui", "crossterm", "ansi_term", "ansi-to-tui", "chrono"]
self-update = ["ureq", "semver", "chrono", "dirs"]
